--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
 }
-
+/* 
 button.wallet-adapter-button-trigger {
   background: #4e4c6c;
   font-size: 16px;
@@ -14,6 +14,27 @@ button.wallet-adapter-button-trigger {
 
 button.wallet-adapter-button-trigger:hover {
   background-color: #7e7ca8 !important;
+} */
+button.wallet-adapter-button-trigger {
+  background: #4e4c6c;
+  border-radius: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  font-size: 16px;
+  transition: all 0.3s ease;
+}
+
+button.wallet-adapter-button-trigger:hover {
+  background-color: #7e7ca8 !important;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
 }
 
 h1 {
